--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.0.7 | MIT License | https://tailwindcss.com
+! tailwindcss v3.0.24 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -16,7 +16,7 @@
   /* 2 */
   border-style: solid;
   /* 2 */
-  border-color: currentColor;
+  border-color: #e5e7eb;
   /* 2 */
 }
 
@@ -37,7 +37,6 @@ html {
   /* 1 */
   -webkit-text-size-adjust: 100%;
   /* 2 */
-  -moz-tab-size: 4;
   /* 3 */
   tab-size: 4;
   /* 3 */
@@ -76,7 +75,7 @@ hr {
 Add the correct text decoration in Chrome, Edge, and Safari.
 */
 
-abbr[title] {
+abbr:where([title]) {
   -webkit-text-decoration: underline dotted;
           text-decoration: underline dotted;
 }
@@ -430,10 +429,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-skew-y: 0;
   --tw-scale-x: 1;
   --tw-scale-y: 1;
-  --tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
-  --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
+  --tw-pan-x:  ;
+  --tw-pan-y:  ;
+  --tw-pinch-zoom:  ;
+  --tw-scroll-snap-strictness: proximity;
+  --tw-ordinal:  ;
+  --tw-slashed-zero:  ;
+  --tw-numeric-figure:  ;
+  --tw-numeric-spacing:  ;
+  --tw-numeric-fraction:  ;
+  --tw-ring-inset:  ;
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
   --tw-ring-color: rgb(59 130 246 / 0.5);
@@ -441,6 +446,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-ring-shadow: 0 0 #0000;
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
+  --tw-blur:  ;
+  --tw-brightness:  ;
+  --tw-contrast:  ;
+  --tw-grayscale:  ;
+  --tw-hue-rotate:  ;
+  --tw-invert:  ;
+  --tw-saturate:  ;
+  --tw-sepia:  ;
+  --tw-drop-shadow:  ;
+  --tw-backdrop-blur:  ;
+  --tw-backdrop-brightness:  ;
+  --tw-backdrop-contrast:  ;
+  --tw-backdrop-grayscale:  ;
+  --tw-backdrop-hue-rotate:  ;
+  --tw-backdrop-invert:  ;
+  --tw-backdrop-opacity:  ;
+  --tw-backdrop-saturate:  ;
+  --tw-backdrop-sepia:  ;
 }
 
 .tw-container {
@@ -516,20 +539,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   bottom: 0px;
 }
 
-.tw-left-0 {
-  left: 0px;
-}
-
-.tw-top-1\/2 {
-  top: 50%;
-}
-
 .tw-left-\[2px\] {
   left: 2px;
 }
 
 .tw-bottom-4 {
   bottom: 1rem;
+}
+
+.tw-left-0 {
+  left: 0px;
+}
+
+.tw-top-1\/2 {
+  top: 50%;
 }
 
 .tw-top-auto {
@@ -560,14 +583,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   z-index: 3;
 }
 
-.tw-z-\[5\] {
-  z-index: 5;
-}
-
-.tw-z-\[15\] {
-  z-index: 15;
-}
-
 .tw-z-0 {
   z-index: 0;
 }
@@ -578,6 +593,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .tw-z-10 {
   z-index: 10;
+}
+
+.tw-z-\[5\] {
+  z-index: 5;
+}
+
+.tw-z-\[15\] {
+  z-index: 15;
 }
 
 .tw-z-\[1\] {
@@ -653,28 +676,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 0.5rem;
 }
 
-.tw-mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.tw-mb-\[25px\] {
-  margin-bottom: 25px;
-}
-
-.tw-mb-3 {
-  margin-bottom: 0.75rem;
-}
-
 .tw-mt-2 {
   margin-top: 0.5rem;
 }
 
-.tw-mb-6 {
-  margin-bottom: 1.5rem;
-}
-
-.tw-mr-4 {
-  margin-right: 1rem;
+.tw-mb-3 {
+  margin-bottom: 0.75rem;
 }
 
 .tw-mt-1 {
@@ -687,6 +694,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .tw-mb-2 {
   margin-bottom: 0.5rem;
+}
+
+.tw-mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.tw-mb-\[25px\] {
+  margin-bottom: 25px;
+}
+
+.tw-mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.tw-mr-4 {
+  margin-right: 1rem;
 }
 
 .tw-mb-4 {
@@ -821,6 +844,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 4rem;
 }
 
+.tw-h-40 {
+  height: 10rem;
+}
+
+.tw-h-\[350px\] {
+  height: 350px;
+}
+
 .tw-h-\[80px\] {
   height: 80px;
 }
@@ -839,14 +870,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .tw-h-10 {
   height: 2.5rem;
-}
-
-.tw-h-40 {
-  height: 10rem;
-}
-
-.tw-h-\[350px\] {
-  height: 350px;
 }
 
 .tw-h-\[50px\] {
@@ -905,6 +928,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 1.5rem;
 }
 
+.tw-w-12 {
+  width: 3rem;
+}
+
+.tw-w-\[200px\] {
+  width: 200px;
+}
+
+.tw-w-\[235px\] {
+  width: 235px;
+}
+
 .tw-w-7 {
   width: 1.75rem;
 }
@@ -923,18 +958,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .tw-w-10 {
   width: 2.5rem;
-}
-
-.tw-w-12 {
-  width: 3rem;
-}
-
-.tw-w-\[200px\] {
-  width: 200px;
-}
-
-.tw-w-\[235px\] {
-  width: 235px;
 }
 
 .tw-w-2\/3 {
@@ -1051,61 +1074,61 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .tw-translate-x-1\/2 {
   --tw-translate-x: 50%;
-  -webkit-transform: var(--tw-transform);
-          transform: var(--tw-transform);
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tw--translate-y-1\/2 {
   --tw-translate-y: -50%;
-  -webkit-transform: var(--tw-transform);
-          transform: var(--tw-transform);
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tw-translate-y-1\/2 {
   --tw-translate-y: 50%;
-  -webkit-transform: var(--tw-transform);
-          transform: var(--tw-transform);
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tw--translate-x-1\/2 {
   --tw-translate-x: -50%;
-  -webkit-transform: var(--tw-transform);
-          transform: var(--tw-transform);
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tw-translate-x-20 {
   --tw-translate-x: 5rem;
-  -webkit-transform: var(--tw-transform);
-          transform: var(--tw-transform);
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tw--translate-y-20 {
   --tw-translate-y: -5rem;
-  -webkit-transform: var(--tw-transform);
-          transform: var(--tw-transform);
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tw-translate-y-20 {
   --tw-translate-y: 5rem;
-  -webkit-transform: var(--tw-transform);
-          transform: var(--tw-transform);
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tw--rotate-6 {
   --tw-rotate: -6deg;
-  -webkit-transform: var(--tw-transform);
-          transform: var(--tw-transform);
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tw-rotate-6 {
   --tw-rotate: 6deg;
-  -webkit-transform: var(--tw-transform);
-          transform: var(--tw-transform);
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tw-transform {
-  -webkit-transform: var(--tw-transform);
-          transform: var(--tw-transform);
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @-webkit-keyframes tw-bounce {
@@ -1545,9 +1568,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 1.5rem;
 }
 
-.tw-py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+.tw-py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.tw-py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .tw-py-3 {
@@ -1555,19 +1583,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 0.75rem;
 }
 
-.tw-px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
 .tw-px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
 
-.tw-py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.tw-py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.tw-px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .tw-px-\[12px\] {
@@ -1583,11 +1611,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .tw-py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
-}
-
-.tw-py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
 }
 
 .tw-px-1 {
@@ -1640,6 +1663,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 24px;
 }
 
+.tw-py-\[90px\] {
+  padding-top: 90px;
+  padding-bottom: 90px;
+}
+
 .tw-px-\[30px\] {
   padding-left: 30px;
   padding-right: 30px;
@@ -1648,11 +1676,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .tw-py-\[25px\] {
   padding-top: 25px;
   padding-bottom: 25px;
-}
-
-.tw-py-\[90px\] {
-  padding-top: 90px;
-  padding-bottom: 90px;
 }
 
 .tw-px-8 {
@@ -1689,20 +1712,44 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 0px;
 }
 
-.tw-pt-\[95px\] {
-  padding-top: 95px;
-}
-
-.tw-pb-\[60px\] {
-  padding-bottom: 60px;
+.tw-pb-16 {
+  padding-bottom: 4rem;
 }
 
 .tw-pb-2 {
   padding-bottom: 0.5rem;
 }
 
+.tw-pr-1 {
+  padding-right: 0.25rem;
+}
+
+.tw-pl-2 {
+  padding-left: 0.5rem;
+}
+
+.tw-pl-8 {
+  padding-left: 2rem;
+}
+
 .tw-pr-5 {
   padding-right: 1.25rem;
+}
+
+.tw-pt-\[200px\] {
+  padding-top: 200px;
+}
+
+.tw-pb-\[40px\] {
+  padding-bottom: 40px;
+}
+
+.tw-pt-\[95px\] {
+  padding-top: 95px;
+}
+
+.tw-pb-\[60px\] {
+  padding-bottom: 60px;
 }
 
 .tw-pr-3 {
@@ -1735,30 +1782,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .tw-pr-4 {
   padding-right: 1rem;
-}
-
-.tw-pb-16 {
-  padding-bottom: 4rem;
-}
-
-.tw-pr-1 {
-  padding-right: 0.25rem;
-}
-
-.tw-pl-2 {
-  padding-left: 0.5rem;
-}
-
-.tw-pl-8 {
-  padding-left: 2rem;
-}
-
-.tw-pt-\[200px\] {
-  padding-top: 200px;
-}
-
-.tw-pb-\[40px\] {
-  padding-bottom: 40px;
 }
 
 .tw-pt-6 {
@@ -1854,14 +1877,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 2rem;
 }
 
-.tw-text-\[22px\] {
-  font-size: 22px;
-}
-
-.tw-text-\[16px\] {
-  font-size: 16px;
-}
-
 .tw-text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1872,14 +1887,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1rem;
 }
 
-.tw-text-\[36px\] {
-  font-size: 36px;
-}
-
-.tw-text-\[15px\] {
-  font-size: 15px;
-}
-
 .tw-text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1887,6 +1894,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .tw-text-\[25px\] {
   font-size: 25px;
+}
+
+.tw-text-\[16px\] {
+  font-size: 16px;
+}
+
+.tw-text-\[22px\] {
+  font-size: 22px;
+}
+
+.tw-text-\[36px\] {
+  font-size: 36px;
+}
+
+.tw-text-\[15px\] {
+  font-size: 15px;
 }
 
 .tw-text-3xl {
@@ -2028,6 +2051,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.tw-text-yellow-500 {
+  --tw-text-opacity: 1;
+  color: rgb(234 179 8 / var(--tw-text-opacity));
+}
+
 .tw-text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -2041,11 +2069,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .tw-text-\[\#666\] {
   --tw-text-opacity: 1;
   color: rgb(102 102 102 / var(--tw-text-opacity));
-}
-
-.tw-text-yellow-500 {
-  --tw-text-opacity: 1;
-  color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
 .tw-text-blue-500 {
@@ -2191,15 +2214,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   opacity: 0;
 }
 
-.tw-shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .tw-shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.tw-shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2260,8 +2283,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:tw-scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
-  -webkit-transform: var(--tw-transform);
-          transform: var(--tw-transform);
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:tw-border-current:hover {
@@ -2323,14 +2346,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(79 93 115 / var(--tw-text-opacity));
 }
 
-.hover\:tw-text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .hover\:tw-text-\[\#ff0000\]:hover {
   --tw-text-opacity: 1;
   color: rgb(255 0 0 / var(--tw-text-opacity));
+}
+
+.hover\:tw-text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:tw-text-blue-700:hover {
@@ -2606,22 +2629,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .md\:tw-translate-x-full {
     --tw-translate-x: 100%;
-    -webkit-transform: var(--tw-transform);
-            transform: var(--tw-transform);
+    -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+            transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .md\:tw--translate-y-1\/4 {
     --tw-translate-y: -25%;
-    -webkit-transform: var(--tw-transform);
-            transform: var(--tw-transform);
-  }
-
-  .md\:tw-grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+            transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .md\:tw-grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:tw-grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:tw-grid-cols-4 {
@@ -2808,12 +2831,12 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: 66.666667%;
   }
 
-  .lg\:tw-w-auto {
-    width: auto;
-  }
-
   .lg\:tw-w-\[210px\] {
     width: 210px;
+  }
+
+  .lg\:tw-w-auto {
+    width: auto;
   }
 
   .lg\:tw-w-\[30\%\] {
@@ -2844,12 +2867,12 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: 66.66666667%;
   }
 
-  .lg\:tw-w-\[17rem\] {
-    width: 17rem;
-  }
-
   .lg\:tw-w-\[calc\(100\%\+17rem\)\] {
     width: calc(100% + 17rem);
+  }
+
+  .lg\:tw-w-\[17rem\] {
+    width: 17rem;
   }
 
   .lg\:tw-w-1\/2 {
@@ -2874,8 +2897,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:tw-translate-x-\[-17rem\] {
     --tw-translate-x: -17rem;
-    -webkit-transform: var(--tw-transform);
-            transform: var(--tw-transform);
+    -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+            transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .lg\:tw-grid-cols-4 {
